Mapping Events added. Some cleanup and readme.md updated.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script type="application/javascript">
 
             var map = {
-
+                'reflect-metadata': '../node_modules/reflect-metadata/Reflect.js'
             };
             var packages = {
                 src: {defaultExtension: 'ts'}
